MDEV-21851: Error in BINLOG_BASE64_EVENT i s always error-logged as if it is done by Slave

The prefix of error log message out of a failed BINLOG applying
is corrected to be the sql command name.